--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
 		"tailwindcss": "^3.1.4",
 		"tslib": "^2.3.1",
 		"typescript": "^4.7.4",
-		"vite": "^3.0.0"
+		"vite": "^3.0.0",
+		"vite-plugin-pwa": "^0.12.3"
 	},
 	"type": "module",
 	"dependencies": {
