--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,9 @@
 		"resolveJsonModule": true,
 		"skipLibCheck": true,
 		"sourceMap": true,
-		"strict": true
+		"strict": true,
+		"types": [
+			"vite-plugin-pwa/client"
+		]
 	}
 }
