--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.22.2",
+		"@rollup/plugin-replace": "^4.0.0",
 		"@sveltejs/adapter-auto": "next",
 		"@types/cheerio": "^0.22.31",
 		"@types/js-cookie": "^3.0.2",
@@ -43,7 +44,10 @@
 		"tslib": "^2.3.1",
 		"typescript": "^4.7.4",
 		"vite": "^3.0.0",
-		"vite-plugin-pwa": "^0.12.3"
+		"vite-plugin-pwa": "^0.12.3",
+		"workbox-core": "^6.5.3",
+		"workbox-precaching": "^6.5.3",
+		"workbox-routing": "^6.5.3"
 	},
 	"type": "module",
 	"dependencies": {
@@ -96,6 +100,7 @@
 		"rehype-sanitize": "^5.0.1",
 		"rehype-stringify": "^9.0.3",
 		"relative-time-format": "^1.1.4",
+		"rollup": ">=1.20.0 <2.0.0 || >=2.0.0 <3.0.0",
 		"rxjs": "^7.5.5",
 		"sass": "^1.53.0",
 		"secure-random": "^1.1.2",
